@@ -41,6 +41,9 @@ Chronological list of authors
   - Lukas Stelzl
   - Jinju Lu
   - Joshua L. Phillips
+2013
+  - Xavier Deupi
+
 
 External code
 -------------
